--- a/.github/workflows/terraform-1.yml
+++ b/.github/workflows/terraform-1.yml
@@ -41,9 +41,9 @@ jobs:
 
             - name: "Terraform Init"
               id: init
-              run: terraform init -backend-config="bucket=${{ env.BUCKET_TF_STATE }}"
+              run: terraform init -backend-config="bucket=${{ env.BUCKET_TF_STATE }}" -input=false
 
-            - name: "Terrform Format"
+            - name: "Terraform Format"
               id: fmt
               run: terraform fmt -check
             
