--- a/.github/workflows/terraform-1.yml
+++ b/.github/workflows/terraform-1.yml
@@ -59,3 +59,25 @@ jobs:
             - name: Terraform plan status
               if: steps.plan.outcome == 'failure'
               run: echo "Terraform plan failed. Please check the configuration."
+
+            - name: "Terraform Apply"
+              id: apple
+              if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+              run: terraform apply -auto-approve -input=false -parallelism=1 planfile
+
+            - name: Configure AWS credentials
+              uses: aws-actions/configure-aws-credentials@v2
+              with:
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-region: ${{ env.AWS_REGION }}
+
+            - name: Get Kube config file
+              id: getconfig
+              if: "steps.apple.outcome == 'success'
+              run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }}
+
+            - name: Install Ingress Controller
+              if: steps.apple.outcome == 'success' && steps.getconfig.outcome == 'success'
+              run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
+
