--- a/.github/workflows/terraform-1.yml
+++ b/.github/workflows/terraform-1.yml
@@ -74,7 +74,7 @@ jobs:
 
             - name: Get Kube config file
               id: getconfig
-              if: "steps.apple.outcome == 'success'
+              if: steps.apple.outcome == 'success'
               run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }}
 
             - name: Install Ingress Controller
